force-app/main/default/objects/PassageiroOportunidade__c/PassageiroOportunidade__c.object-meta.xml
<CustomObject>
    <label>Passageiro da Oportunidade</label>
    <nameField>
        <displayFormat>PASS-{0000000}</displayFormat>
        <label>Passageiro da Oportunidade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passageiros da Oportunidade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>