force-app/main/default/objects/PassageiroOportunidade__c/fields/Identificacao__c.field-meta.xml
<CustomField>
    <fullName>Identificacao__c</fullName>
    <formula>Passageiro__r.FirstName + &apos; &apos; + Passageiro__r.LastName + &apos; - &apos; +  Passageiro__r.NumeroDocumento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificacao</label>
    <type>Text</type>
</CustomField>