force-app/main/default/objects/PassageiroOportunidade__c/fields/Passageiro__c.field-meta.xml
<CustomField>
    <fullName>Passageiro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passageiro</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Passageiro não pode ser do tipo Contato, mas sim do tipo Passageiro ou Cliente - Pessoa Física</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Contato</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Passageiros da Oportunidade</relationshipLabel>
    <relationshipName>PassageirosOportunidade</relationshipName>
    <type>Lookup</type>
</CustomField>