force-app/main/default/objects/PassageiroOportunidade__c/fields/VerificaExclusao__c.field-meta.xml
<CustomField>
    <fullName>VerificaExclusao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verifica Exclusão</label>
    <type>Checkbox</type>
</CustomField>